--- a/VriendApp/app/src/main/res/layout/activity_home.xml
+++ b/VriendApp/app/src/main/res/layout/activity_home.xml
@@ -8,16 +8,28 @@
     <TextView
         android:id="@+id/tvGreeting"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="90dp"
         android:gravity="center"
         android:textColor="@color/black"
         android:textSize="25sp" />
 
+    <Button
+        android:id="@+id/btnProfile"
+        android:layout_width="match_parent"
+        android:layout_height="170dp"
+        android:text="Profile" />
+
+    <Button
+        android:id="@+id/btnMap"
+        android:layout_width="match_parent"
+        android:layout_height="170dp"
+        android:text="Find Events" />
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnLogout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_height="170dp"
+        android:clickable="true"
         android:text="Log Out"
         android:textColor="@color/black" />
 
