--- a/app/src/main/res/layout/activity_preferencelist.xml
+++ b/app/src/main/res/layout/activity_preferencelist.xml
@@ -10,5 +10,18 @@
         android:id="@+id/btn0rder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:layout_alignParentTop="true"
+        android:text="Select"
+        android:layout_marginTop="50dp"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/tvItemSelected"
+        android:textSize="25sp"
+        android:textColor="@color/design_default_color_primary"
+        android:textStyle="italic"/>
 </RelativeLayout>
